<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="#E0F2F1"
        >

        <RelativeLayout
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/nigeria"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ng" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nigeria"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/algeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="25dp"
                    android:text="@string/a1"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/answerNigeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nigeria"
                    android:layout_toRightOf="@id/algeria"
                    android:paddingRight="25dp"
                    android:text="@string/a2"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/benin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nigeria"
                    android:layout_toRightOf="@+id/answerNigeria"
                    android:text="@string/a3"
                    android:textSize="20sp" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:fadingEdge="horizontal"></View>

        <RelativeLayout
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sudan"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/sd" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sudan"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Portugal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sudan"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/a4"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Zambia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sudan"
                    android:layout_toRightOf="@+id/Portugal"
                    android:paddingRight="25dp"
                    android:text="@string/a5"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/answer_sudan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sudan"
                    android:layout_toRightOf="@+id/Zambia"
                    android:text="@string/a6"
                    android:textSize="20sp" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:fadingEdge="horizontal"></View>

        <RelativeLayout
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/Norway"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/no" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Norway"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Nepal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Norway"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/a7"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/answerNorway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Norway"
                    android:layout_toRightOf="@+id/Nepal"
                    android:paddingRight="25dp"
                    android:text="@string/a8"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Norway"
                    android:layout_toRightOf="@+id/answerNorway"
                    android:text="@string/a9"
                    android:textSize="20sp" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:fadingEdge="horizontal"></View>

        <RelativeLayout
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sweeden"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/se" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sweeden"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Iran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sweeden"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/a10"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/answerSweeden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sweeden"
                    android:layout_toRightOf="@+id/Iran"
                    android:paddingRight="25dp"
                    android:text="@string/a11"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sweeden"
                    android:layout_toRightOf="@+id/answerSweeden"
                    android:text="@string/a12"
                    android:textSize="20sp" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:fadingEdge="horizontal"></View>

        <RelativeLayout
            android:id="@+id/question6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/slovakia"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/sk" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/slovakia"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Slovenia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/slovakia"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/a13"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Somalia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/slovakia"
                    android:layout_toRightOf="@+id/Slovenia"
                    android:paddingRight="25dp"
                    android:text="@string/a14"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/answerSlovakia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/slovakia"
                    android:layout_toRightOf="@+id/Somalia"
                    android:text="@string/a15"
                    android:textSize="20sp" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:fadingEdge="horizontal"></View>

        <RelativeLayout
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/swaziland"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/sz" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/swaziland"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/answerSwaziland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/swaziland"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/a16"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/southafrica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/swaziland"
                    android:layout_toRightOf="@+id/answerSwaziland"
                    android:paddingRight="25dp"
                    android:text="@string/a17"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/swaziland"
                    android:layout_toRightOf="@+id/southafrica"
                    android:text="@string/a18"
                    android:textSize="20sp" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:fadingEdge="horizontal"></View>

        <RelativeLayout
            android:id="@+id/question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/turkey"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tr" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/turkey"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/tunisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/turkey"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/a19"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/answerTurkey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/turkey"
                    android:layout_toRightOf="@+id/tunisa"
                    android:paddingRight="25dp"
                    android:text="@string/a20"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/turkey"
                    android:layout_marginBottom="150dp"
                    android:layout_toRightOf="@+id/answerTurkey"
                    android:text="@string/a21"
                    android:textSize="20sp" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp"
                android:layout_marginLeft="200dp"
                android:fontFamily="casual"
                android:text="Score:0"
                android:textSize="50sp" />

            <Button
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity=""
                android:layout_marginBottom="30dp"
                android:onClick="finish"
                android:text="Finish"
                android:textSize="20sp" />


        </RelativeLayout>


    </LinearLayout>
</ScrollView>